[project]
name = "cairo-ec"
version = "0.1.0"
description = "Elliptic curve library for Cairo"
readme = "README.md"
authors = [{ name = "Clément Walter", email = "clement0walter@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "cairo-addons",
  "cairo-core",
  "cairo-lang>=0.13.3",
  "maturin>=1.8.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/**/*.cairo", # Include all .cairo files in src directory
]

[tool.hatch.build]
artifacts = [
  "src/**/*.cairo", # Also include .cairo files as artifacts
]

[tool.uv]
dev-dependencies = [
  "pytest>=7.0",
  "cairo-lang>=0.13.0",
  "hypothesis>=6.124.3",
  "jupyter>=1.1.1",
  "ethereum",
]

[tool.isort]
profile = "black"
known_first_party = ["cairo_addons", "cairo_core"]

[tool.uv.sources]
ethereum = { git = "https://github.com/ethereum/execution-specs.git" }
cairo-addons = { workspace = true }
cairo-core = { workspace = true }
