[project]
name = "cairo-ec"
version = "0.1.0"
description = "Elliptic curve library for Cairo"
readme = "README.md"
authors = [{ name = "Clément Walter", email = "clement0walter@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "cairo-addons",
  "cairo-core",
  "cairo-lang>=0.13.3",
  "maturin>=1.8.1",
  "click>=8.1.7",
]

[project.scripts]
compile_circuit = "cairo_ec.scripts.compile_circuit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/**/*.cairo", # Include all .cairo files in src directory
]
packages = ["src/cairo_ec", "tests"]

[tool.hatch.build]
artifacts = [
  "src/**/*.cairo", # Also include .cairo files as artifacts
]

[tool.uv]
dev-dependencies = [
  "pytest>=7.0",
  "cairo-lang>=0.13.0",
  "hypothesis>=6.124.3",
  "jupyter>=1.1.1",
  "ethereum-execution",
]

[tool.isort]
profile = "black"
known_third_party = ["ethereum", "ethereum_rlp", "ethereum_types"]
known_first_party = [
  "cairo_ec",
  "cairo_core",
  "cairo_addons",
  "eth_rpc",
  "mpt",
  "utils",
  "tests",
  "keth_types",
]

[tool.uv.sources]
ethereum-execution = { git = "https://github.com/kkrt-labs/execution-specs.git", rev = "9e5f36b4d7f8e8ae2d8831d2460fbd88648fcdee" }
cairo-addons = { workspace = true }
cairo-core = { workspace = true }
