# pyproject.toml
[project]
name = "cairo-lint"
version = "0.1.0"
description = "A CLI tool to format Cairo files and remove unused imports."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "typer>=0.15.3",
  "rich>=14.0.0",
  "cairo-lang>=0.13.3", # Assuming a recent version
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]
package = true


[project.scripts]
cairo-lint = "cairo_lint.main:app"

[tool.cairo-lint]
exclude_dirs = ["tests/test_data"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairo_lint"]
